# coincident

./: CMakeLists.txt  README.md
self-test/: main.cc
src/: controller.cc  disassembly.cc  elf.cc  ptrace.cc  thread-ia32.cc  thread.cc  utils.cc
src/apis/: semaphore-helpers.cc  semaphore.cc  semaphore.hh
src/apis/pthreads/: common.h  mutex.cc  pthreads.cc
src/include/: apis.hh  controller.hh  disassembly.hh  elf.hh  function.hh  ptrace.hh  thread.hh  utils.hh
src/include/coincident/: coincident.h  controller.hh  thread.hh
src/include/coincident/api-helpers/: semaphore-helpers.hh  semaphore.hh
test/: CMakeLists.txt  binary-build.c  main.cc  mock-ptrace.hh  mock-thread.cc  test.hh  tests-controller.cc  tests-disassembly.cc  tests-elf.cc
